docs: add auth swagger action, fix response message
